fix(style): How long post titles break when wrapping Old CSS would cause long post titles to break in the middle of a word when wrapping to the next line. This changes the default behavior to break around the word instead.

--- a/public/assets/styles/utility/text.scss
+++ b/public/assets/styles/utility/text.scss
@@ -134,6 +134,6 @@ pre:last-child {
 }
 
 .text-break {
-  word-break: break-all;
+  word-break: break-word;
   overflow-wrap: break-word;
 }
